--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Mira estos perritos! </h1>
+    <h1> Fotos random de perritos! </h1>
     <div id="dog-image-container">
       <img id="dog-image" src="" alt="Random Dog">
     </div>
